Bug 209916 - Hulu.com gets stuck in a "loading" state when seeking
Summary: Hulu.com gets stuck in a "loading" state when seeking
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-04-02 11:58 PDT by Jer Noble
Modified: 2020-05-23 05:52 PDT (History)
11 users (show)

See Also:


Attachments
Patch (3.88 KB, patch)
2020-04-02 12:03 PDT, Jer Noble
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2020-04-02 11:58:56 PDT
Hulu.com gets stuck in a "loading" state when seeking
Comment 1 Jer Noble 2020-04-02 11:59:36 PDT
<rdar://problem/55041979>
Comment 2 Jer Noble 2020-04-02 12:03:25 PDT
Created attachment 395285 [details]
Patch
Comment 3 EWS 2020-04-02 12:58:48 PDT
Committed r259404: <https://trac.webkit.org/changeset/259404>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 395285 [details].