Hulu.com gets stuck in a "loading" state when seeking https://bugs.webkit.org/show_bug.cgi?id=209916 <rdar://problem/55041979>

Reviewed by Eric Carlson.

Hulu.com depends on the "canplay" event firing after a seek to hide their loading indicator.
The HTML spec says that "canplay" should only be fired when moving from the HAVE_CURRENT_DATA
to HAVE_FUTURE_DATA or greater, but when seeking within the buffered range, the readyState
never drops below HAVE_FUTURE_DATA. To work around this behavior, add a quirk for Hulu.com
that always fires "canplay" after a seek completes, so long as the readyState is HAVE_FUTURE_DATA
or higher.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::seekTask):
(WebCore::HTMLMediaElement::finishSeek):
* page/Quirks.cpp:
(WebCore::Quirks::needsCanPlayAfterSeekedQuirk const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/222834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259404 268f45cc-cd09-0410-ab3c-d52691b4dbfc